--- a/[论文笔记]用于高性能机器学习的抽样稠密矩阵乘法.md
+++ b/[论文笔记]用于高性能机器学习的抽样稠密矩阵乘法.md
@@ -1,4 +1,4 @@
-![论文封面](https://imgb9.photophoto.cn/20150807/zhihulogo-26086526_3.jpg)
+![论文封面](img/[论文笔记]用于高性能机器学习的抽样稠密矩阵乘法/论文封面.png)
 # [论文笔记]用于高性能机器学习的抽样稠密矩阵乘法
 
 **Sampled Dense Matrix Multiplication for High-Performance Machine Learning**
