--- a/高级数据库.md
+++ b/高级数据库.md
@@ -4,7 +4,7 @@
 
 ---
 
-[Database System Concepts](https://codex.cs.yale.edu/avi/db-book/)
+[Database System Concepts<br>Seventh Edition](https://db-book.com/)
 
 ---
 
@@ -217,13 +217,98 @@ Lock-Based Protocols
 
 向并发控制管理器发出锁定请求. 只有在请求获得批准后, 事务才能继续进行.
 
+锁-兼容性矩阵:
+
+![锁-兼容性矩阵](img/高级数据库/锁兼容性矩阵.png)
+
+- 如果请求的锁与其他事物对该项已持有的锁兼容, 则一个事务可能会被授予对该项的锁.
+- 任意数量的事务可以持有对一个项目的共享锁
+- 但如果任何事务对该项事务持有独占锁, 则其他事务对该项事务不可持有任何锁
+
+#### 死锁
+
+![死锁](img/高级数据库/死锁示例.png)
+
+T3和T4都无法取得进展.
+T4执行到 `lock-S(B)` 会导致T4等待T3释放对B的锁, 而T3执行到 `lock-X(A)` 会导致T3等待T4释放对A的锁.
+
+这种情况称为死锁
+
+- 要处理死锁, 必须回滚T3或T4中的一个, 并释放其锁
+
+在大多数锁定协议中存在死锁的可能性. 死锁是一种不可避免的恶果.
+
+如果并发控制管理器设计不当, 也可能导致"饥饿".
+例如:
+
+- 一个事务可能在等待对一个项目的X锁,而一系列其他事务请求并获得了对同一项目的S锁.
+- 由于死锁, 同一事务被反复回滚
+
+可以设计并发控制管理器来防止饥饿现象.
+
+续...
+
+---
+
 ### 基于时间戳的协议
 
 Timestamp-Based Protocols
 
+每笔交易在进入系统时都会被赋予一个时间戳TS(Ti)
+
+- 每笔交易都有一个唯一的时间戳
+- 较新的交易的时间戳严格大于较早的交易
+- 时间戳可以基于一个逻辑计数器
+    - 实时可能并非独一无二
+    - 可以使用(挂钟时间, 逻辑计数器)来确保
+
+基于时间戳的协议管理并发执行, 使得时间戳顺序=可串行化顺序
+
+几种基于时间戳的替代协议:
+
+- [时间戳排序协议](#时间戳排序协议)
+
+#### 时间戳排序协议
+
+Timestamp-Ordering(TSO) Protocol
+
+为每个数据Q维护两个时间戳值:
+
+- `W-timestamp(Q)` 是任何成功执行 `write(Q)` 的事务的最大时间戳
+- `R-timestamp(Q)` 是任何成功执行 `read(Q)` 的事务的最大时间戳
+
+对任何写操作施加规则以确保
+
+- 任何冲突的操作都是按照时间戳顺序执行的
+- 无需操作会导致事务回滚
+
+假设事务Ti发出一个 `read(Q)`
+
+1. 如果 `TS(Ti) ≤ W-timestamp(Q)`, 那么Ti需要读取一个已经被覆盖的Q的值. 因此, 读取操作被拒绝, 并且Ti被回滚
+2. 如果 `TS(Ti) ≥ W-timestamp(Q)`, 则执行 `read` 操作, 并将 `R-timestamp(Q)` 设置为 `max(R-timestamp(Q),TS(Ti))`
+
+假设事务Ti发出一个 `write(Q)`
+
+1. 如果 `TS(Ti) ＜ R-timestamp(Q)`, 那么Ti所生成的Q的值之前是需要的, 并且系统假定该值永远不会被生成.
+   因此写入操作被拒绝, 并且Ti被回滚
+2. 如果 `TS(Ti) ＜ W-timestamp(Q)`, 那么Ti正试图写入Q的过时值. 因此, 此 `write` 操作被拒绝, 并且Ti被回滚.
+3. 否则, 执行 `write` 操作, 并将 `W-timestamp(Q)` 设置为 `TS(Ti)`.
+
+续...
+
 ### 基于验证的协议
 
 Validation-Based Protocols
+
+idea: 我们能将提交时间用作序列化顺序吗?
+
+- 将写操作推迟到事务结束
+- 跟踪由事务读取/写入的数据项
+- 在提交时进行验证, 检测任何超出序列化顺序的读取/写入操作
+
+也被称为"乐观并发控制", 因此事务在执行时完全期望在验证期间一切顺利.
+
+续...
 
 ### 多钟粒度
 
@@ -233,6 +318,25 @@ Multiple Granularity
 
 Multiversion Schemes
 
+多版本方案保留数据项的旧版本以提高并发性.
+有几种变体:
+
+- 多版本时间戳排序
+- 多版本两阶段锁定
+- 快照隔离
+
+Key ideas:
+
+- 每次成功地写入都会导致所写入的数据项的新版本被创建.
+- 使用时间戳来标注版本.
+- 当发出 `read(Q)` 操作时, 根据发出读请求的事务的时间戳选择Q的适当版本, 并返回所选版本的值
+
+读操作永远不必等待, 因为会立即返回一个合适的版本.
+
+#### 多版本时间戳排序
+
+续...
+
 ### 插入和删除操作
 
 Insert and Delete Operations
@@ -240,3 +344,29 @@ Insert and Delete Operations
 ### 索引结构中的并发
 
 Concurrency in Index Structures
+
+**在线索引创建:**
+
+问题: 如何在大型关系表上创建索引而不影响并发更新
+
+- 缩影构建可能会花费很长时间
+- 两阶段锁定会阻塞所有并发更新
+
+Key ideas:
+
+- 在关系的快照上构建索引, 但要跟踪快照之后发生的所有更新. 此时未对索引应用更新
+- 然后应用后续的更新以更上进度
+- 在追赶阶段默契获取关系锁以组织并发更新
+- 完成剩余的更新, 并为系统目录添加索引
+- 后续交易将在目录中查找索引并对其进行更新
+
+索引与其他数据库项不同, 因为它们唯一的作用就是有助于访问数据.
+
+索引结构的访问频率通常非常高, 远远高于其他数据项.
+像处理其他数据库项一样处理索引结构, 例如通过对索引节点进行两阶段锁定, 可能会导致并发性低下.
+
+存在几种索引并发协议, 其中对内部节点的锁会体检释放, 而不是以两阶段的方式释放.
+只要能保持索引的准确性, 对索引进行可序列化的并发访问是可以接受的.
+特别是, 只要我们能最终到达正确的叶节点, 在B+树的内部节点读取的准确值就无关紧要了.
+
+续...
