--- a/高级多核计算.md
+++ b/高级多核计算.md
@@ -1,8 +1,10 @@
 # 高级多核计算 2024-09
 
+#  
+
 ## 期中复习
 
-考试内容:
+考试重点:
 
 * CPU / GPU 뭐가 다른지(차이점)
 * T/F 문제 낼거임, 맞으면 2점, 틀리면 -1, 안고르면 0점
@@ -60,7 +62,8 @@ S=1/(1-a+a/n)
 
 a为并行计算部分所占比例，n为并行处理结点个数
 
-当1-a=0时，(即没有串行，只有并行)最大加速比s=n；当a=0时（即只有串行，没有并行），最小加速比s=1；当n→∞时，极限加速比s→ 1/（1-a），这也就是加速比的上限
+当1-a=0时，(即没有串行，只有并行)最大加速比s=n；当a=0时（即只有串行，没有并行），最小加速比s=1；
+当n→∞时，极限加速比s→ 1/（1-a），这也就是加速比的上限
 
 ### PCAM 목록, 특징 매칭문제 / 뭐가 파티셔닝, 커뮤니케이션인지
 
