--- a/高级多核计算.md
+++ b/高级多核计算.md
@@ -85,7 +85,7 @@ Mapping 映射
 
 #### Lazy Synchronization 延迟同步
 
-延迟同步是一种非阻塞同步策略, 将同步操作退知道绝对必要时才执行.
+延迟同步是一种非阻塞同步策略, 将同步操作推迟到绝对必要时才执行.
 核心思想史在操作数据时避免立即加锁或同步, 而是在谁的实际状态需要被改变时才进行同步.
 
 关键点:
@@ -163,9 +163,46 @@ a为并行计算部分所占比例，n为并行处理结点个数
 
 ### PCAM 목록, 특징 매칭문제 / 뭐가 파티셔닝, 커뮤니케이션인지
 
+Partitioning 划分
+
+- 目的是将大任务分解成小任务, 以提高并发性.
+- 划分可以是数据分解, 也就是域分解(Domain/data decomposition),
+  或者是计算功能的分解(Functional Decomposition)
+- 划分后, 要确保数据集和计算集互不相交
+- 划分阶段通常不考虑处理器的数量和目标机器的体系结构
+- 域分解关注数据, 将数据分解成大致相等的小块
+- 功能分解关注计算, 将计算划分为不同的任务, 这些任务的所需数据如果不相交, 则划分成功
+
+Communication 通信
+
+任务划分之后, 需要确定人物之间的数据交换量, 这是通信阶段的主要任务.
+这个阶段要检测划分的合理性, 并确保任务间的数据流是有效的.
+
+- 确定任务间的数据交换量, 检测划分的合理性
+- 功能分解确定了任务间的数据流, 而通信限制了并发执行的任务
+
+Agglomeration 组合
+
+并行计算中, 通信是一个瓶颈, 在组合阶段, 目标是将一些任务组合成更大的任务, 以减少通信成本.
+这通常涉及到增加任务的粒度和可能的重复计算.
+
+- 根据任务的局部性, 将任务组合成更大的任务, 以优化通信成本或提高性能
+- 合并小尺寸任务, 减少任务数, 如果任务数等于处理器数, 则也完成了映射过程
+- 通过增加任务的粒度和重复计算, 可以减少通信成本
+
+Mapping 映射
+
+- 将每个任务分配到具体的处理器上, 以提高算法的性能.
+- 如果任务数大于处理器数, 则存在负载平衡和任务调度问题
+- 映射的目标是减少算法的执行时间, 将并发任务分配到不同的处理器, 而频繁通信的任务则放在同一处理器上
+- 映射实际上是一种权衡, 属于NP完全问题, 需要考虑负载平衡算法和任务调度算法
+
+
 ### PCAM 한번 보면 이해될듯
 
 ### Decomposition
+
+分而治之: 将应用程序分解为子任务
 
 ### Thread 정의
 
@@ -178,3 +215,31 @@ a为并行计算部分所占比例，n为并行处理结点个数
 ### 세마포어
 
 ### Optimistic 동기화, Lazy 동기화
+
+#### Optimistic Synchronization 乐观同步
+
+乐观同步是一种基于乐观锁的并发控制机制.
+核心思想是在数据被修改之前不对数据加锁, 而是在事务尝试提交时检测是否有其他事物求改了同一数据.
+如果检测到冲突, 则会回滚事务并提示用户重试操作.
+
+关键点:
+
+- 冲突检测: 在数据被修改之前, 不对数据加锁, 而是在提交时检测冲突
+- 回滚和重试: 如果检测到冲突, 事务会回滚并可能重试
+- 适用场景: 适用于冲突发生概率比较低的场景, 可以提高性能
+
+乐观同步侧重于减少锁的使用, 以提高并发性能
+
+#### Lazy Synchronization 延迟同步
+
+延迟同步是一种非阻塞同步策略, 将同步操作推迟到绝对必要时才执行.
+核心思想史在操作数据时避免立即加锁或同步, 而是在谁的实际状态需要被改变时才进行同步.
+
+关键点:
+
+- 推迟同步: 在可能的情况下, 推迟同步操作, 以减少锁的竞争和等待时间
+- 局部锁定: 大多数写操作可以通过锁定单个节点来完成, 而不是锁定整个数据结构
+- 使用场景: 适用于写操作不是非常频繁, 或者写操作可以被局部划到数据结构的特定部分的场景
+
+延迟同步侧重于推迟同步操作, 减少不必要的同步开销
+
