--- a/高级多核计算.md
+++ b/高级多核计算.md
@@ -206,7 +206,7 @@ Mapping 映射
 
 ### Thread 정의
 
-一个进程内最小的执行单位. 有时被称为"轻量级进程", 因为多个线程可以纯在单个进程中, 共享相同的内存空间, 但独立执行.
+一个进程内最小的执行单位. 有时被称为"轻量级进程", 因为多个线程可以存在单个进程中, 共享相同的内存空间, 但独立执行.
 
 执行路径, 由操作系统调度器作为一个单元单独管理的指令序列. 每个进程可以有多个线程.
 
