--- a/[摘要]数据库系统概念.md
+++ b/[摘要]数据库系统概念.md
@@ -1,4 +1,4 @@
-![img.png](img/高级数据库/封面.png)
+![img.png](img/%5B摘要%5D数据库系统概念/封面.png)
 
 # 高级数据库
 
@@ -45,7 +45,7 @@ Transaction State
         - 终止交易
 - 已提交: 在成功完成之后
 
-![交易状态图](img/高级数据库/交易状态图.png)
+![交易状态图](img/%5B摘要%5D数据库系统概念/交易状态图.png)
 
 ### 并发执行
 
@@ -101,11 +101,11 @@ Serializability
 通过一系列非冲突指令的交换, 调度表3可以转换为调度表6, 即一个连续的调度表, 其中T2遵循T1.
 因此, 调度表3是"冲突可串行化"的.
 
-![冲突可串行化](img/高级数据库/冲突可串行化.png)
+![冲突可串行化](img/%5B摘要%5D数据库系统概念/冲突可串行化.png)
 
 不可"冲突可串行化"的调度示例:
 
-![不可冲突可串行化示例](img/高级数据库/不可冲突可串行化示例.png)
+![不可冲突可串行化示例](img/%5B摘要%5D数据库系统概念/不可冲突可串行化示例.png)
 
 #### 视图可串行化
 
@@ -119,7 +119,7 @@ Serializability
 
 以下是一个可视图串行化但不可冲突可串行化的示例:
 
-![可视图串行化但不可冲突可串行化的示例](img/高级数据库/可视图串行化但不可冲突可串行化的示例.png)
+![可视图串行化但不可冲突可串行化的示例](img/%5B摘要%5D数据库系统概念/可视图串行化但不可冲突可串行化的示例.png)
 
 #### 可串行化的测试
 
@@ -145,14 +145,14 @@ Recoverability
 
 以下调度属于无法恢复
 
-![无法恢复的调度](img/高级数据库/无法恢复的调度.png)
+![无法恢复的调度](img/%5B摘要%5D数据库系统概念/无法恢复的调度.png)
 
 如果T8应该终止, T9可能会读取到不一致的数据库状态. 因此, 数据库必须确保调度是可恢复的
 
 **级联回滚**: 单个事务故障会导致一系列事务回滚.
 以下调度中所有事物都尚未提交(因此该调度是可恢复的)
 
-![可恢复调度](img/高级数据库/可恢复调度.png)
+![可恢复调度](img/%5B摘要%5D数据库系统概念/可恢复调度.png)
 
 缺点是可能导致大量工作的付诸东流
 
@@ -217,7 +217,7 @@ Lock-Based Protocols
 
 锁-兼容性矩阵:
 
-![锁-兼容性矩阵](img/高级数据库/锁兼容性矩阵.png)
+![锁-兼容性矩阵](img/%5B摘要%5D数据库系统概念/锁兼容性矩阵.png)
 
 - 如果请求的锁与其他事物对该项已持有的锁兼容, 则一个事务可能会被授予对该项的锁.
 - 任意数量的事务可以持有对一个项目的共享锁
@@ -225,7 +225,7 @@ Lock-Based Protocols
 
 #### 死锁
 
-![死锁](img/高级数据库/死锁示例.png)
+![死锁](img/%5B摘要%5D数据库系统概念/死锁示例.png)
 
 T3和T4都无法取得进展.
 T4执行到 `lock-S(B)` 会导致T4等待T3释放对B的锁, 而T3执行到 `lock-X(A)` 会导致T3等待T4释放对A的锁.
