--- a/[摘要]数据库系统概念.md
+++ b/[摘要]数据库系统概念.md
@@ -6,6 +6,14 @@
 
 ---
 
+## 10章
+
+### 地图归约(MapReduce)
+
+可靠, 可扩展并行计算的平台
+
+---
+
 ## 17章: 交易
 
 概述:
@@ -368,3 +376,104 @@ Key ideas:
 特别是, 只要我们能最终到达正确的叶节点, 在B+树的内部节点读取的准确值就无关紧要了.
 
 续...
+
+---
+
+## 19章: 恢复系统
+
+概述:
+
+- [故障分类](#故障分类)
+- [存储结构](#存储结构)
+- [恢复与原子性](#恢复与原子性)
+- [基于日志的恢复](#基于日志的恢复)
+- [远程备份系统](#远程备份系统)
+
+### 故障分类
+
+Failure Classification
+
+交易失败:
+
+- 逻辑错误: 由于某些内部错误状况, 交易无法完成
+- 系统错误: 由于错误情况(例如死锁), 数据库系统必须终止一个活动的交易
+
+系统崩溃: 停电或其他硬件或软件故障导致的系统崩溃
+
+- 故障停止假设: 假设非易失性储存内容不会因系统崩溃而损坏. 数据库系统有众多的完整性检查来防止磁盘数据的损坏.
+
+磁盘故障: 磁头碰撞或类似的磁盘故障会破坏全部或部分磁盘存储
+
+- 破坏被认为是可检测的: 磁盘驱动器使用效验和来检测故障.
+
+### 恢复算法
+
+Recovery Algorithms
+
+假设交易 $T_i$ 将50美元从账户A转到账户B: 两项更新操作: 从A中减去50美元, 并将50美元加到B中
+
+事务 $T_i$ 需要对A和B进行更新, 并将其输出到数据库中:
+
+- 在这些修改中的一项完成单两项都未完成之前, 可能会出现故障.
+- 在不确保事务会提交的情况下修改数据库, 可能会使数据库处于不一致的状态.
+- 如果事务提交后不久就发生了故障, 不修改数据库可能会导致更新丢失.
+
+恢复算法有两个部分:
+
+1. 在正常交易处理期间采取的行动, 以确保有足够的信息来从故障中恢复
+2. 在数据库恢复失败后采取的行动, 以确保原子性, 一致性和持久性.
+
+### 存储结构
+
+Storage Structure
+
+易失性存储: 在系统崩溃时无法保留数据. 例如主内存, 缓存
+
+非易失性存储: 能抵御系统崩溃. 例如磁盘, 磁带, 闪存, 非易失性RAM. 但是也可能失败, 导致数据丢失.
+
+稳定储存:
+
+- 一种在所有失败都能存活下来的储存形式
+- 通过在不同的非易失性介质上保持多个副本来进行近似处理
+
+## 稳定存储的实现
+
+Stable-Storage Implementation
+
+在单独的磁盘上为每个数据块保持多个副本. 副本可以存放在偏远的地方, 以防范地区性灾难.
+
+数据传输期间的故障可能导致副本不一致, 块传输可能导致一下情况:
+
+- 成功完成
+- 部分完成: 目标区块信息不正确
+- 完全失败: 目标区块从未被更新
+
+在数据传输期间保护存储介质免于故障(一种解决方案), 执行输出操作如下(假设每个模块由两份副本):
+
+1. 将信息写入第一个物理块.
+2. 当首次写入成功完成时, 将相同的信息写入第二个物理块.
+3. 只有在第二次写入成功完成后, 输出才算完成.
+
+由于输出操作期间出现故障, 一个数据块的副本可能会有所不同. 则需要从失败中恢复:
+
+1. 首先找出不一致的模块
+    1. 昂贵的解决方案: 比较每个磁盘块的两个副本内容
+    2. 更好的解决方案:
+        - 记录非易失性存储上的磁盘写入进度.
+        - 在恢复期间使用此信息来查找可能不一致的数据块, 并且仅对这些块的副本进行比较.
+        - 用于硬件RAID系统
+2. 如果检测到不一致数据库的任一副本存在错误, 则用另一个副本覆盖它. 如果两个副本均无错误, 但是不一致, 则用第一个副本覆盖第二个副本.
+
+### 数据访问
+
+Data Access
+
+到57页
+
+---
+
+## 23章
+
+3到14
+23到30
+41到52
