--- a/[摘要]数据库系统概念.md
+++ b/[摘要]数据库系统概念.md
@@ -436,7 +436,7 @@ Storage Structure
 - 一种在所有失败都能存活下来的储存形式
 - 通过在不同的非易失性介质上保持多个副本来进行近似处理
 
-## 稳定存储的实现
+### 稳定存储的实现
 
 Stable-Storage Implementation
 
