--- a/[论文笔记]如何阅读论文.md
+++ b/[论文笔记]如何阅读论文.md
@@ -67,13 +67,13 @@ THREE-PASS)"法. 描述了如何使用这种方法做文献调查.
 ### 第三遍
 
 要完全理解一篇论文, 特别是对于复读者, 需要进行第三遍阅读. 第三遍的关键在于尝试在脑海中重现论文: 做出和作者相同的假设,
-重新创作作品. 通过将这种再创作与实际论文进行比较, 不仅可以轻松识别一篇论文的创新之处, 还可以识别影藏的缺陷和假设.
+重新创作作品. 通过将这种再创作与实际论文进行比较, 不仅可以轻松识别一篇论文的创新之处, 还可以识别论文的缺陷和假设.
 
-这一遍需要非常注意细节. 应该识别并挑战每一个假设.
+这一遍需要非常注意细节. 应该识别并挑战每一个假设. 并且应该考虑如果是自己的话将如何表达一个特定的想法.
+这种实际与虚拟的比较有助于深入了解论文中的证明和展示方法, 很可能会将其添加到你的工具库中. 在这个过程中, 还应该记下未来工作的想法.
 
-对于初学者来说, 这一关需要4到5个小时, 对于有经验的读者大概需要一个小时. 在第三遍阅读完, 应该能根据记忆重构论文的整个结构,
-能够识别它的优缺点.
-特别是, 应该能准确地指出
+对于初学者来说, 这一遍需要4到5个小时, 对于有经验的读者大概需要一个小时. 在第三遍阅读完, 应该能根据记忆重构论文的整个结构,
+能够识别它的优缺点. 特别是, 应该能准确地指出论文的强项和弱项, 包括隐含的假设、遗漏的引用以及实验或分析技术中可能存在的问题等.
 
 ---
 
