--- a/[论文笔记]如何阅读论文.md
+++ b/[论文笔记]如何阅读论文.md
@@ -21,24 +21,24 @@ THREE-PASS)"法. 描述了如何使用这种方法做文献调查.
 
 快速浏览整个论文. 大约花费5到10分钟:
 
-1. 仔细阅读标题, 摘要和介绍
-2. 阅读章节和子章节标题
-3. 阅读结论
-4. 浏览参考文献, 在脑海中勾出已经读过的论文
+1. **仔细阅读标题, 摘要和介绍**
+2. **阅读章节和子章节标题**
+3. **阅读结论**
+4. **浏览参考文献, 在脑海中勾出已经读过的论文**
 
 在"第一遍"结束时, 应该能回答出五个问题:
 
-1. 分类: 这是什么类型的论文?
-2. 背景: 与哪些论文有关? 用了哪些理论基础来分析问题?
-3. 正确性: 论文的假设是否合理?
-4. 贡献: 论文的主要贡献是什么?
-5. 清晰性: 论文写的好不好?
+1. **分类: 这是什么类型的论文?**
+2. **背景: 与哪些论文有关? 用了哪些理论基础来分析问题?**
+3. **正确性: 论文的假设是否合理?**
+4. **贡献: 论文的主要贡献是什么?**
+5. **清晰性: 论文写的好不好?**
 
 根据以上信息, 可以选择要不要继续阅读这篇论文. 可能是因为对这篇论文不感兴趣, 或者对这个领域不够了解, 无法理解这篇论文,
 或者作者做出了无效的假设.
 
 > 在这里, 作者还提到了, 当写一篇论文时, 可以参考大多数审稿人和读者只会通过这一遍的阅读. 如果审稿人阅读完一篇还不能理解主旨,
-> 论文很可能会被拒绝. 如果读者在5分钟还不能理解论文的亮点, 那么论文很可能不会被阅读. 主要要选择连贯的章节和子章节标题,
+> 论文很可能会被拒绝. 如果读者在5分钟还不能理解论文的亮点, 那么论文很可能不会被阅读. 撰写论文时主要要选择连贯的章节和子章节标题,
 > 并要写出简明而且全面的摘要.
 
 ---
@@ -47,9 +47,9 @@ THREE-PASS)"法. 描述了如何使用这种方法做文献调查.
 
 第二遍要更仔细地阅读论文, 但忽略细节. 在阅读过程中, 记下要点或在空白处做出点评会很有帮助.
 
-1. 仔细看论文中的图形, 图表和其他插图. 特别注意图表. 坐标轴的标注是否正确. 结果是否显示了误差条.
-   像这样的常见错误会把仓促、粗制滥造的作品和真正优秀的作品区分开.
-2. 标记相关的未读参考文献(这是了解更多论文背景的好方法). 这些文献可能会对你的研究有帮助.
+1. **仔细看论文中的图形, 图表和其他插图. 特别注意图表. 坐标轴的标注是否正确. 结果是否显示了误差条.
+   像这样的常见错误会把仓促、粗制滥造的作品和真正优秀的作品区分开.**
+2. **标记相关的未读参考文献(这是了解更多论文背景的好方法). 这些文献可能会对你的研究有帮助.**
 
 第二遍最多花费1个小时. 过了第一遍, 应该能够掌握论文的内容, 并且能够总结论文的主要内容. 阅读到这种程度适用于这是一篇感兴趣的论文,
 但是不在你的研究方向上.
@@ -66,8 +66,8 @@ THREE-PASS)"法. 描述了如何使用这种方法做文献调查.
 
 ### 第三遍
 
-要完全理解一篇论文, 特别是对于复读者, 需要进行第三遍阅读. 第三遍的关键在于尝试在脑海中重现论文: 做出和作者相同的假设,
-重新创作作品. 通过将这种再创作与实际论文进行比较, 不仅可以轻松识别一篇论文的创新之处, 还可以识别论文的缺陷和假设.
+要完全理解一篇论文, 特别是对于复读者, 需要进行第三遍阅读. **第三遍的关键在于尝试在脑海中重现论文: 做出和作者相同的假设,
+重新创作作品. 通过将这种再创作与实际论文进行比较, 不仅可以轻松识别一篇论文的创新之处, 还可以识别论文的缺陷和假设.**
 
 这一遍需要非常注意细节. 应该识别并挑战每一个假设. 并且应该考虑如果是自己的话将如何表达一个特定的想法.
 这种实际与虚拟的比较有助于深入了解论文中的证明和展示方法, 很可能会将其添加到你的工具库中. 在这个过程中, 还应该记下未来工作的想法.
@@ -83,8 +83,8 @@ THREE-PASS)"法. 描述了如何使用这种方法做文献调查.
 
 ### 选择论文
 
-首先, 使用谷歌Scholar或CiteSeer等学术搜索引擎, 选择一些精心挑选的关键词. 找到该领域最近的三到五篇论文. 对每篇论文进行"
-第一遍"阅读, 获得对该工作的初步了解, 然后仔细阅读这些论文的"相关工作"部分. 这里通常会包含对近期这一领域的研究的简要总结.
+首先, **使用谷歌Scholar或CiteSeer等学术搜索引擎, 选择一些精心挑选的关键词. 找到该领域最近的三到五篇论文. 对每篇论文进行"
+第一遍"阅读, 获得对该工作的初步了解, 然后仔细阅读这些论文的"相关工作"部分.** 这里通常会包含对近期这一领域的研究的简要总结.
 如果幸运的话还能找到一篇最新的综述论文. 只要阅读这篇综述论文工作就完成了, 然后恭喜自己好运.
 
 ### 确定关键论文和研究人员
@@ -107,7 +107,7 @@ THREE-PASS)"法. 描述了如何使用这种方法做文献调查.
 ## 总结
 
 论文主要介绍了一种高效阅读研究论文的方法:"三遍(THREE-PASS)"法, 并探讨了如何利用这种方法进行文献调查. 作者在过去15年里,
-一直使用这种方法来阅读会议论文集, 撰写评论, 做背景研究等. 证明了"三遍(THREE-PASS)"法的有效性. 这篇论文提供了一种阅读论文的方法,
-帮助研究人员更高效地获取信息, 理解内容并进行学术研究.
+一直使用这种方法来阅读会议论文集, 撰写评论, 做背景研究等. 证明了"三遍(THREE-PASS)"法的有效性. **这篇论文提供了一种阅读论文的方法,
+属于实在阅读论文中学习怎么阅读论文. 可以帮助研究人员更高效地获取信息, 理解内容并进行学术研究.**
 
 论文链接: [How to Read a Paper](https://dl.acm.org/doi/abs/10.1145/1273445.1273458)
