--- a/[论文笔记]如何阅读论文.md
+++ b/[论文笔记]如何阅读论文.md
@@ -110,6 +110,6 @@ THREE-PASS)"法. 描述了如何使用这种方法做文献调查.
 
 论文主要介绍了一种高效阅读研究论文的方法:"三遍(THREE-PASS)"法, 并探讨了如何利用这种方法进行文献调查. 作者在过去15年里,
 一直使用这种方法来阅读会议论文集, 撰写评论, 做背景研究等. 证明了"三遍(THREE-PASS)"法的有效性. **这篇论文提供了一种阅读论文的方法,
-属于实在阅读论文中学习怎么阅读论文. 可以帮助研究人员更高效地获取信息, 理解内容并进行学术研究.**
+属于实在阅读论文中学习怎么阅读论文. 这个方法可以帮助研究人员更高效地获取信息, 理解内容并进行学术研究.**
 
 论文链接: [How to Read a Paper](https://dl.acm.org/doi/abs/10.1145/1273445.1273458)
