--- a/[论文笔记]用于稀疏矩阵乘法的自适应稀疏分块方法.md
+++ b/[论文笔记]用于稀疏矩阵乘法的自适应稀疏分块方法.md
@@ -40,11 +40,7 @@ CSR(Compressed Sparse Row)表示法
 
 ---
 
-## ASpT概述
-
-本节概述了ASpT(自适应稀疏分块)方法, 这是一种使用无序压索稀疏行(CSR)表示法进行稀疏矩阵乘法分块的执行策略.
-
-### 数据重用的潜力
+## 数据重用的潜力
 
 对于一个 N×N 的带状稀疏矩阵, 假设带宽(带状矩阵的"带宽"是矩阵中心对角线左右两边包含非零元素的宽度)为B. 意味着每一行最多有B个非零元素.
 总共N行, 因此矩阵的总非零元素约为N×B. 与大小为N×K的稠密矩阵进行矩阵乘法运算, 对于每个非零元素, 需要进行K次乘法和K-1次加法,
@@ -82,14 +78,18 @@ CSR(Compressed Sparse Row)表示法
 
 ---
 
-### 三种数据访问方案对比
+## 三种数据访问方案对比
 
-默认情况下, 按照行顺序(row-wise)访问稀疏矩阵$S$的非零元素, 这可能导致$D$的列数据在缓存中的重用率低.
-为了实现稠密矩阵$D$元素更好的重用, 必须改变稀疏矩阵$S$元素访问顺序.
+**按行访问(Row-wise Access)**: 默认情况下, 使用CSR表示法如下图算法中先按照行顺序(row-wise)访问稀疏矩阵$S$的非零元素.
+这使得$D$的同一列的数据可能会跨多行被访问, 而不是集中在一次计算中访问, 导致$D$的列数据在缓存中的重用率低.
+为了实现稠密矩阵$D$元素更好的重用, 必须改变稀疏矩阵$S$元素的访问顺序.
 
-**按列访问(Column-wise Access)**: 完全按列访问$S$可以实现对$D$的列元素的最大化重用, 从而降低数据传输量,
-但是可能会导致输出矩阵$O$的重用率下降. 因为$O$的每个元素需要在最内层循环中多次累加更新, 无法保持在缓存或寄存器中,
-增加了缓存失效(cache miss)的可能性.
+![顺序运算SpMM和SDDMM的算法](img/[论文笔记]用于稀疏矩阵的自适应稀疏分块方法/顺序运算SpMM和SDDMM的算法.png)
+顺序运算SpMM和SDDMM的算法
+
+> 还有一种办法是按列访问(Column-wise Access): 完全按列访问$S$可以实现对$D$的列元素的最大化重用, 从而降低数据传输量,
+> 但是可能会导致输出矩阵$O$的重用率下降. 因为$O$的每个元素需要在最内层循环中多次累加更新, 无法保持在缓存或寄存器中,
+> 增加了缓存失效(cache miss)的可能性.
 
 **DCSC表示的列内按行访问(Column-wise Access within Row-panels)**: 通过将$S$分为多个行面板(row-panels),
 然后在每个行面板中按照列的顺序访问. 使用双压缩稀疏列(DCSC)表示法, 将$S$的非零元素按照列分组压缩储存.
@@ -103,12 +103,42 @@ DCSC的列访问模式导致单词操作设计的非零元素数量较小(列密
 和$O$的重用性. 每个二维块中, 稠密矩阵$D$的列数据和输出矩阵$O$的行数据可以在寄存器中重用. 但是,
 二维分块的性能依赖于稀疏矩阵$S$的非零元素分布. 如果矩阵的非零元素非常稀疏, 某些二维块可能空置, 浪费计算资源.
 
+下图是基于随机生成的稀疏矩阵, 通过模拟不同的稀疏结构, 测试三种不同方法的性能.
+
 ![三种方案的性能对比](img/[论文笔记]用于稀疏矩阵的自适应稀疏分块方法/三种方案的性能对比.png)
 三种方案的性能对比
 
+- GFLOPS表示每秒十亿次的浮点运算数, 是一个衡量计算设备性能的指标. 数值越高表示性能越好
+- nnz_colseg表示平均每列段的的非零元素数量, 数值越高代表稀疏矩阵越密集, 数据重用潜力越大.
+  计算公式为: $\frac{TM \times nnz}{M \times N}$
+    - $TM$: DCSC推荐的行段大小
+    - $nnz$: 稀疏矩阵的非零元素总数
+    - $M$, $N$: 稀疏矩阵的行数和列数
+
+三种方法的优劣取决于稀疏矩阵的稀疏性(非零元素的分布模式). 每种方法适用于特定的矩阵结构, 无法单纯地依赖一种方法解决所有情况.
+
 ---
 
-ASpT方案基于以下观察: 当二维分块中的列具有足够高的nnz_colseg,
+## ASpT概述
+
+本节概述了ASpT(自适应稀疏分块)方法, 这是一种使用无序压索稀疏行(CSR)表示法进行稀疏矩阵乘法分块的执行策略.
+
+ASpT方案基于以下观察:
+
+- 当nnz_colseg较高时, 二维分块的表现最佳, 因为它能充分利用列的高密度特性, 将数据重用率最大化.
+- 当nnz_colseg较低时, 标准的按行访问会更加高效, 因为稀疏性高的列段对分块的优化效果不明显
+- 实验中, DCSC在任何场景下的性能都不会同时超过其他两种方法, 它在$D$元素的列数据重用的提升不足以弥补寄存器操作效率低的劣势
+
+因此, ASpT选择CSR表示的按行访问(Row-wise Access)和二维分块(2D Tiling)方法的组合, 以适应不同的稀疏性.
+根据稀疏矩阵不同区域的稠密程度动态选择策略. 下图展示了使用自适应稀疏分块(ASpT)方法背后的高级思想.
+
+![在多个内核上使用ASpT进行稀疏矩阵乘法](img/[论文笔记]用于稀疏矩阵的自适应稀疏分块方法/在多个内核上使用ASpT进行稀疏矩阵乘法.png)
+在多个内核上使用ASpT进行稀疏矩阵乘法
+
+ASpT方法首先将稀疏矩阵$S$划分为多个行面板(row-panels), 行面板的大小(行数)由缓存(L2 cache)或内存容量限制来决定.
+然后对每个行面板通过阈值(阈值通过上节中的测试确定, 是 CSR 和 2D Tile 性能的交叉点)分为高密度的稠密块(Dense tiles)
+和低密度的稀疏块(Sparse tile). 高密度列段使用 2D tiling 方法处理，低密度列段直接采用 row-wise CSR 方法. 为了实现这一优化,
+ASpT 会对每个行块内的列段进行重新排序, 使高密度列段优先处理并划分为 2D tiles, 而低密度列段被集中放置, 用于未分块的CSR计算.
 
 ---
 
