--- a/[论文笔记]如何阅读论文.md
+++ b/[论文笔记]如何阅读论文.md
@@ -2,7 +2,7 @@
 
 # [论文笔记]如何阅读论文
 
-**How to Read a Paper**
+<<**How to Read a Paper**>>
 
 论文于2007年发表在ACM SIGCOMM Computer Communication ReviewVolume 37Issue.
 研究人员花费大量时间阅读论文, 学习有效地阅读论文是一项很关键但很少教的技能. 这篇论文概述了阅读研究论文的"三遍(
