--- a/[论文笔记]用于高性能机器学习的抽样稠密矩阵乘法.md
+++ b/[论文笔记]用于高性能机器学习的抽样稠密矩阵乘法.md
@@ -1,7 +1,7 @@
 ![论文封面](img/[论文笔记]用于高性能机器学习的抽样稠密矩阵乘法/论文封面.png)
 # [论文笔记]用于高性能机器学习的抽样稠密矩阵乘法
 
-**Sampled Dense Matrix Multiplication for High-Performance Machine Learning**
+<<**Sampled Dense Matrix Multiplication for High-Performance Machine Learning**>>
 
 论文于 2018 年发表在 IEEE 25th International Conference on High Performance Computing (HiPC).
 
