--- a/[论文笔记]用于稀疏矩阵乘法的自适应稀疏分块方法.md
+++ b/[论文笔记]用于稀疏矩阵乘法的自适应稀疏分块方法.md
@@ -1,6 +1,6 @@
 ![封面](img/[论文笔记]用于稀疏矩阵的自适应稀疏分块方法/封面.png)
 
-# 用于稀疏矩阵乘法的自适应稀疏分块方法
+# [论文笔记]用于稀疏矩阵乘法的自适应稀疏分块方法
 
 <<**Adaptive Sparse Tiling for Sparse Matrix Multiplication**>>
 
