--- a/[论文笔记]用于稀疏矩阵乘法的自适应稀疏分块方法.md
+++ b/[论文笔记]用于稀疏矩阵乘法的自适应稀疏分块方法.md
@@ -12,6 +12,8 @@
 采样稀疏矩阵-稠密矩阵乘法). 使用了标准的压缩稀疏行(CSR)格式, 并在其中进行行内重排以实现自适应分块. 使用来自Sparse
 Suite集合的大量矩阵进行实验评估, 表明与当前可用的最先进替代方案相比, 性能有了显著的提升.
 
+文章链接: [[论文笔记]用于稀疏矩阵乘法的自适应稀疏分块方法](https://zhuanlan.zhihu.com/p/18595957701)
+
 ---
 
 ## Tiling
