--- a/[论文笔记]用于稀疏矩阵乘法的自适应稀疏分块方法.md
+++ b/[论文笔记]用于稀疏矩阵乘法的自适应稀疏分块方法.md
@@ -277,4 +277,4 @@ SpMM和SDDMM是许多机器学习应用中的关键核心. 与其他使用定制
 
 论文链接: [Adaptive Sparse Matrix-Matrix Multiplication on GPUs](https://dl.acm.org/doi/abs/10.1145/3293883.3295712)
 
-开源链接: [ASpT-mirror](https://github.com/LucasWilkinson/ASpT-mirror)
+开源链接: [github.com/LucasWilkinson/ASpT-mirror](https://github.com/LucasWilkinson/ASpT-mirror)
